--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Leos Portfolio</title>
+    <title>Leo</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -403,7 +403,7 @@
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
-                            <i class="bi bi-star-fill"></i>
+                           
                         </div>
                         <h5>Curious</h5>
                         <p class="my-3">One thing i love about you is that you're 
@@ -442,7 +442,6 @@
 
                     <div class="review shadow-effect bg-base p-4 rounded-4">
                         <div class="text-brand h5">
-                            <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
